[FINTRACK-17]: Renamec category and categoryEntries
